fixed FOV, added timestamp into corner, cube no longer stuck to bottom of screen, etc

--- a/style.css
+++ b/style.css
@@ -16,3 +16,8 @@ h1{
     right:0;
     z-index: -1;
 }
+#timestampHolder{
+    position: fixed;
+    right:0;
+    color:mediumaquamarine;
+}
